some more restructuring and added custom measure class generator rather than a simple template.